--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,12 +15,14 @@ phases:
   pre_build:
     commands:
       # - echo Entered the pre_build phase...
+      - TOKEN=$(curl --silent -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
+      - export AWS_DEFAULT_REGION=$(curl --silent -H "X-aws-ec2-metadata-token: $TOKEN"  http://169.254.169.254/latest/meta-data/placement/availability-zone | sed 's/\(.*\)[a-z]/\1/')
+      # - echo $STACKACTION
     finally:
       #- echo This always runs even if the login command fails
   build:
     commands:
       # - echo Entered the build phase at `date`
-      - echo $STACKACTION
       - aws cloudformation $STACKACTION-stack --template-body file://module1/securityhub-remediations-workshop.yml
             --stack-name $STACKPREFIX
             --capabilities CAPABILITY_NAMED_IAM
@@ -37,14 +39,15 @@ phases:
         then
           exit 1
         fi
-      # - |
-      #  if expr "${STACKACTION}" : "create" >/dev/null;
-      #  then
-      - aws ec2 associate-iam-instance-profile --iam-instance-profile Name=SecurityHubRemediationWorkshopCli --instance-id $CLIINSTANCE && sleep 220;
-      - export GITCMD="git clone --single-branch --branch master https://github.com/FireballDWF/securityhub-remediations.git && cd securityhub-remediations"
-      #  else
-      #    export GITCMD="cd securityhub-remediations && git pull"
-      #  fi
+      - |
+        if expr "${STACKACTION}" : "create" >/dev/null;
+        then
+          # Following is required for the instance to be able to connect to ssm in order to receive send-command.
+          - aws ec2 associate-iam-instance-profile --iam-instance-profile Name=SecurityHubRemediationWorkshopCli --instance-id $CLIINSTANCE && sleep 220;
+          - export GITCMD="git clone --single-branch --branch master https://github.com/FireballDWF/securityhub-remediations.git && cd securityhub-remediations"
+        else
+          - export GITCMD="cd securityhub-remediations && git pull"
+        fi
       - export COMMANDID=$(aws ssm send-command --document-name AWS-RunShellScript
             --targets Key=instanceids,Values=$CLIINSTANCE --comment "CodeBuild Test $CODEBUILD_BUILD_NUMBER"
             --cloud-watch-output-config CloudWatchLogGroupName=$CWLGROUPNAME,CloudWatchOutputEnabled=true
