--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,13 +23,16 @@ phases:
   build:
     commands:
       # - echo Entered the build phase at `date`
-      - aws cloudformation $STACKACTION-stack --template-body file://module1/securityhub-remediations-workshop.yml
+      - |
+        if [ ${STACKACTION} == 'create' ] || [ ${STACKACTION} == 'update' ]
+        then
+          aws cloudformation $STACKACTION-stack --template-body file://module1/securityhub-remediations-workshop.yml
             --stack-name $STACKPREFIX
             --capabilities CAPABILITY_NAMED_IAM
             --parameters $STACKPARAMETERS
             --tags Key=CostCenter,Value=SecurityHubRemediations-Codebuild &&
-          aws cloudformation wait stack-$STACKACTION-complete --stack-name $STACKPREFIX
-
+            aws cloudformation wait stack-$STACKACTION-complete --stack-name $STACKPREFIX
+        fi
       - export CLIINSTANCE=$(aws ec2 describe-instances
                             --filters Name="tag:aws:cloud9:environment",Values=`aws cloudformation describe-stack-resource --stack-name $STACKPREFIX
                             --logical-resource-id SecHubWorkshopEnv --query StackResourceDetail.PhysicalResourceId --output text` Name=instance-state-name,Values=running --query Reservations[*].Instances[*].[InstanceId] --output text)
@@ -37,6 +40,7 @@ phases:
       - |
         if expr "${CLIINSTANCE}" : "" >/dev/null;
         then
+          echo "Can't determine instance-id"
           exit 1
         fi
       - |
