--- a/buildspec.yml
+++ b/buildspec.yml
@@ -44,13 +44,13 @@ phases:
           exit 1
         fi
       - |
-        if expr "${STACKACTION}" : "create" >/dev/null;
+        if [ ${STACKACTION} == 'create' ]
         then
           # Following is required for the instance to be able to connect to ssm in order to receive send-command.
-          - aws ec2 associate-iam-instance-profile --iam-instance-profile Name=SecurityHubRemediationWorkshopCli --instance-id $CLIINSTANCE && sleep 220;
-          - export GITCMD="git clone --single-branch --branch master https://github.com/FireballDWF/securityhub-remediations.git && cd securityhub-remediations"
+          aws ec2 associate-iam-instance-profile --iam-instance-profile Name=SecurityHubRemediationWorkshopCli --instance-id $CLIINSTANCE && sleep 220;
+          export GITCMD="git clone --single-branch --branch master https://github.com/FireballDWF/securityhub-remediations.git && cd securityhub-remediations"
         else
-          - export GITCMD="cd securityhub-remediations && git pull"
+          export GITCMD="cd securityhub-remediations && git pull"
         fi
       - export COMMANDID=$(aws ssm send-command --document-name AWS-RunShellScript
             --targets Key=instanceids,Values=$CLIINSTANCE --comment "CodeBuild Test $CODEBUILD_BUILD_NUMBER"
