fix record_state name

--- a/module6/post-ebs-snapshot-public.yml
+++ b/module6/post-ebs-snapshot-public.yml
@@ -58,7 +58,7 @@ policies:
         recommendation_url: ""
         confidence: 100
         compliance_status: PASSED
-        #record_status: ARCHIVED
+        #record_state: ARCHIVED
 
       - type: remove-tag
         tags:
