--- a/module2/ec2-sechub-remediate-severity-with-findings.yml
+++ b/module2/ec2-sechub-remediate-severity-with-findings.yml
@@ -7,7 +7,7 @@ policies:
         role: arn:aws:iam::{account_id}:role/CloudCustodian
         packages: [botocore, boto3, urllib3]
         memory: 128
-        concurrency: 5
+        concurrency: 2
         tags:
           CostCenter: SecurityHubWorkshop
           CreatedBy: CloudCustodian
@@ -15,9 +15,9 @@ policies:
       #- type: event
       #  key: "detail.findings[].ProductFields.aws/securityhub/ProductName"
       #  value: GuardDuty
-      # - type: event
-      #    key: "detail.findings[].Resources[].Type"
-      #  value: AwsEc2Instance
+      - type: event
+        key: detail.findings[0].Resources[0].Type
+        value: AwsEc2Instance
       # Filter for medium and high severity events from GuardDuty
       - type: event
         key: detail.findings[0].Severity.Normalized
