--- a/module2/ec2-sechub-remediate-severity-with-findings.yml
+++ b/module2/ec2-sechub-remediate-severity-with-findings.yml
@@ -5,9 +5,9 @@ policies:
     mode:
         type: hub-finding
         role: arn:aws:iam::{account_id}:role/CloudCustodian
-        packages: [botocore, boto3, urllib3]
+        # packages: [botocore, boto3, urllib3]
         memory: 128
-        concurrency: 2
+        concurrency: 1
         tags:
           CostCenter: SecurityHubWorkshop
           CreatedBy: CloudCustodian
