--- a/module2/ec2-sechub-remediate-severity-with-findings.yml
+++ b/module2/ec2-sechub-remediate-severity-with-findings.yml
@@ -7,6 +7,7 @@ policies:
         role: arn:aws:iam::{account_id}:role/CloudCustodian
         member-role: arn:aws:iam::{account_id}:role/CloudCustodianMember
         memory: 128
+        packages: [botocore, boto3]
         concurrency: 1
         tags:
           CostCenter: SecurityHubWorkshop
