refactor iam actions

--- a/module1/securityhub-remediations-workshop.yml
+++ b/module1/securityhub-remediations-workshop.yml
@@ -213,6 +213,7 @@ Resources:
         Version: "2012-10-17"
         Statement:
           -
+            Sid: "OnlyForCliConductWorkshopOrValidate"
             Effect: "Allow"
             Action:
               - "ec2:CreateVolume"
