--- a/module1/securityhub-remediations-workshop.yml
+++ b/module1/securityhub-remediations-workshop.yml
@@ -218,6 +218,8 @@ Resources:
             Action:
               - "ec2:CreateVolume"
               - "ec2:ModifySnapshotAttribute"
+              - "securityhub:EnableSecurityHub"
+              - "guardduty:CreateDetector"
               - "guardduty:CreateSampleFindings"
               - "guardduty:ArchiveFindings"
               - "cloudformation:ValidateTemplate"
