--- a/module1/securityhub-remediations-workshop.yml
+++ b/module1/securityhub-remediations-workshop.yml
@@ -103,6 +103,7 @@ Metadata:
     config:
       ignore_checks:
       - E3002
+      - E3003
 
 Resources:
   WorkshopVpc:
@@ -783,4 +784,4 @@ Resources:
       IsLogging: true
       IsMultiRegionTrail: false
       Tags:
-        CostCenter: !Ref "CostCenter"
+        - CostCenter: !Ref "CostCenter"
